# zeekjs

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .readthedocs.yaml  CMakeLists.txt  Makefile  README.md  configure  configure.plugin
.github/workflows/: ci.yml  nightly.yml
cmake/: FindLibUV.cmake  FindNodejs.cmake
dev/: bump-version.sh  env.sh  nodejs.lsan.supp
doc/: Dockerfile  Makefile  conf.py  index.rst  package-lock.json  package.json  requirements.txt  zeek.js
doc/examples/: http-stats.js  log-bypass.js
docker/: debian-bookworm-lts.Dockerfile  debian-bookworm.Dockerfile  debian-trixie.Dockerfile  debian.Dockerfile  fedora-37-nightly.Dockerfile  fedora-37.Dockerfile  fedora-38-nightly.Dockerfile  fedora-38.Dockerfile  fedora-39-nightly.Dockerfile  fedora-39.Dockerfile  fedora-40.Dockerfile  fedora-41-nightly.Dockerfile  fedora-41.Dockerfile  fedora-42-nightly.Dockerfile  fedora-42.Dockerfile  fedora-43-nightly.Dockerfile  fedora-43.Dockerfile  fedora-nightly.Dockerfile  fedora.Dockerfile  ubuntu-2210.Dockerfile  ubuntu-2304.Dockerfile  ubuntu-2310.Dockerfile  ubuntu-2404.Dockerfile
examples/: hello.js  http.js  redis-demo.js  set-record-fields.js  set-record-fields.zeek  table-access.js  table-access.zeek
examples/ja3/: ja3-js.zeek  ja3.js
examples/redis/: export.js
scripts/: __load__.zeek  zeek.d.ts
src/: Executor.h  Helpers.h  IOLoop.cc  IOLoop.h  Nodejs.cc  Nodejs.h  Plugin.cc  Plugin.h  Types.cc  Types.h  ZeekCompat.h  ZeekJS.h  config.h.in
tests/: btest.cfg
tests/Baseline/zeekjs.cluster-node/: .stdout
tests/Baseline/zeekjs.event/: .stdout
tests/Baseline/zeekjs.event-error/: .stdout
tests/Baseline/zeekjs.event-order/: zeek-output
tests/Baseline/zeekjs.global-vars/: .stdout
tests/Baseline/zeekjs.global-vars-assign/: .stdout
tests/Baseline/zeekjs.global-vars-assign-errors/: .stdout
tests/Baseline/zeekjs.hello-typescript/: .stdout
tests/Baseline/zeekjs.hook-load-file/: .stdout
tests/Baseline/zeekjs.hook.custom/: .stdout
tests/Baseline/zeekjs.hook.no-break/: .stdout
tests/Baseline/zeekjs.hook.priority/: .stdout
tests/Baseline/zeekjs.hook.with-break/: .stdout
tests/Baseline/zeekjs.integration.before-exit/: .stdout
tests/Baseline/zeekjs.integration.before-exit-keep-alive/: .stdout
tests/Baseline/zeekjs.integration.config-framework/: .stdout
tests/Baseline/zeekjs.integration.config-framework-local-nets/: .stdout
tests/Baseline/zeekjs.integration.disable-analyzer/: .stdout
tests/Baseline/zeekjs.integration.exit/: .stdout
tests/Baseline/zeekjs.integration.http-delayed/: .background..stdout  .stdout
tests/Baseline/zeekjs.integration.http-pcap/: http-export.log.sorted
tests/Baseline/zeekjs.integration.intel/: .stdout  intel.log.noheaders
tests/Baseline/zeekjs.integration.ioloop-iosource-timer/: .stdout
tests/Files/: nodejs.lsan.supp
tests/Traces/: dns-http-https.pcap  dns.pcap  http.pcap
tests/zeekjs/: cluster-node.sh  event-error.sh  event-order.js  event.sh  global-vars-assign-errors.sh  global-vars-assign.sh  global-vars.sh  hello-typescript.sh  hello.sh  hook-load-file.js  log-events.sh  many-events.sh  new-event.sh  priority.sh  select-fields-errors.sh  show-plugin.zeek  timer.sh  zeek-obj-receiver.sh
tests/zeekjs/hook/: custom.sh  (+3 more)
(+151 files in other folders)
